
2018-12-19  Ron Norman <rjn@inglenet.com>

	fixing EXTFH bug #561, part II
	* fileio.c (lineseq_write): handle EXTFH with write options not set
	* fileio.c (copy_file_to_fcd, copy_fcd_to_file): added code for
	  LINE SEQUENTIAL flags for EXTFH interface
	  *Note: deactivated until file_features are merged from rw-branch*

2018-12-13  Ron Norman <rjn@inglenet.com>

	fixing EXTFH bug #561, part I
	* fileio.c (update_file_to_fcd): adjustments for setting openMode
	* fileio.c (copy_fcd_to_file): fixed coding error if file has no keys

2018-11-25  Simon Sobisch <simonsobisch@gnu.org>

	* intrinsic.c (cob_intr_content_of): fixed unlikely case of empty *srcfield
	  not raising EC-DATA-PTR-NULL
	* intrinsic.c (cob_intr_content_length, cob_intr_content_of):
	  minor refactoring
	* intrinsic.c (decimal_places_for_seconds): changed parameter to
	  unsigned int as it is enough and keeps the same types in callers

2018-11-22  Ron Norman <rjn@inglenet.com>

	* move.c (cob_move_binary_to_binary): fixed to do truncation as required

2018-11-20  Ron Norman <rjn@inglenet.com>

	* numeric.c (cob_print_realbin): fixed to call cob_binary_get_uint64
	  for unsigned field

2018-11-11  Simon Sobisch <simonsobisch@gnu.org>

	* common.h [COB_WITHOUT_EXCEPTIONS]: allow include of libcob.h without
	  any other libcob header

2018-11-01  Simon Sobisch <simonsobisch@gnu.org>

	* common.h [COB_WITHOUT_DECIMAL]: allow include of libcob.h without
	  gmp header

2018-10-28  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_info): fixed missing periods in GMP/MPIR version number
	  between minor and patchlevel
	* common.c: minor refactoring - separate translate_boolean_to_int()
	* common.h [__ORANGEC__]: added to used WIN32 defines

2018-10-21  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: exchanged system-specific PTRFILLER define for FCD3 by union

2018-09-30  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c [HAVE_FCNTL]: minor code cleanup